--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,38 @@
+html {
+  background-color: beige;
+}
+
+img {
+  height: auto;
+  width: 300px;
+}
+
 h1 {
   background-color: beige;
   color: green;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+ul {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: red;
+}
+
+h3 {
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: red;
+}
+
+ol {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: beige;
+}
+
